# FQ-HLL-Keyboard

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android_build.yml  android_build_debug.yml  android_build_release.yml  android_build_release_signed_apk.yml  android_release.yml  android_sign.yml  build_custom_apk.yml  build_debug_apk.yml  build_release_sign_apk.yml  copy_release_signed.yml  sign_release_apk.yml  trigger_custom_apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/FQ-HyperLogLog-Autocorrect/: README.md
app/src/main/res/drawable/: key_background.xml  key_popup_background.xml  key_popup_view.xml  key_pressed_background.xml
app/src/main/res/layout/: activity_main.xml  custom_keyboard_layout.xml  custom_keyboard_layout_black.xml  custom_keyboard_layout_dark_blue.xml  custom_keyboard_layout_default.xml  custom_keyboard_preview.xml  item_candidate_chip.xml  spinner.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: clipboard.xml  custom_keypad.xml  custom_keypad_azerty.xml  custom_keypad_colemak.xml  custom_keypad_dvorak.xml  custom_keypad_medium.xml  custom_keypad_qwerty.xml  custom_keypad_qwertz.xml  custom_keypad_short.xml  custom_keypad_tall.xml  custom_keypad_zhuyin.xml  custom_keypad_zhuyin_eten.xml  (+7 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
themes/: README.md  themes.md
(+7 files in other folders)
